MDL-83877 mod_quiz: Fix quiz question overflow CSS issues.

--- a/mod/quiz/styles.css
+++ b/mod/quiz/styles.css
@@ -735,6 +735,7 @@ table.quizreviewsummary td.cell {
 
 #page-mod-quiz-edit ul.slots li.section li.activity .activityinstance {
     display: flex;
+    flex-wrap: wrap;
     flex: 1 1 auto;
     min-height: 1.7em;
     padding-right: 2px;
@@ -804,6 +805,8 @@ table.quizreviewsummary td.cell {
     white-space: nowrap;
     background: #e6e6e6;
     padding: 0.1em 0;
+    display: flex;
+    align-items: baseline;
 }
 
 #page-mod-quiz-edit .mod_quiz_edit_forms {
